# Dirichlet_task_by_gradient

./: CMakeLists.txt  README.md
application/: main.cpp  mainwindow.cpp  mainwindow.h
tests/: simple_test.cpp
